# kumaushi-climate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: api.rs  audio.rs  db.rs  dj.rs  energy.rs  gpio.rs  lighting.rs  main.rs  mqtt_client.rs
crates/controller/src/control/: mod.rs
crates/sensor-node/: Cargo.toml
crates/sensor-node/.cargo/: config.toml
crates/sensor-node/src/: main.rs
crates/sensor-node/src/sensors/: co2.rs  ds18b20.rs  mod.rs  sht31.rs
dashboard/: index.html
docker/: Cargo.toml
docs/: wiring.md
