[package]
name = "kumaushi-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "kumaushi-controller"
path = "src/main.rs"

[dependencies]
kumaushi-common = { path = "../common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# MQTT
rumqttc = "0.24"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config from environment
dotenvy = "0.15"

# Error handling
anyhow = "1"

# HTTP server state sharing
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP client for Hue / Powerwall / Starlink APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
# GPIO on Raspberry Pi (Linux only)
rppal = { version = "0.18", optional = true }

[features]
default = []
rpi = ["rppal"]
