[package]
name = "kumaushi-sensor-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "sensor-node"
path = "src/main.rs"

[dependencies]
kumaushi-common = { path = "../common" }

# ESP-IDF standard library support
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"
embedded-hal = "1"
embedded-svc = "0.28"

# Serialization (no_std compatible subset)
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

# Logging
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

[build-dependencies]
embuild = "0.31"

[profile.release]
opt-level = "s"
